--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.8.1
 attrs==25.3.0
-Django==5.2
+Django==5.0.14
+django-filter==25.1
 django-taggit==6.1.0
-djangorestframework==3.16.0
+djangorestframework==3.14.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
 inflection==0.5.1
@@ -12,6 +13,7 @@ pillow==11.2.1
 PyJWT==2.9.0
 python-decouple==3.8
 python-dotenv==1.1.0
+pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.24.0
