--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==25.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==5.0.14
+django-cors-headers==4.7.0
 django-filter==25.1
 django-mailjet==0.3.1
 django-taggit==6.1.0
@@ -17,6 +18,7 @@ mailjet-rest==1.3.4
 oauthlib==3.2.2
 pillow==11.2.1
 PyJWT==2.9.0
+PyMySQL==1.1.1
 python-decouple==3.8
 python-dotenv==1.1.0
 pytz==2025.2
