--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ django-taggit==6.1.0
 djangorestframework==3.14.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
+gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 mailjet-rest==1.3.4
 oauthlib==3.2.2
+packaging==25.0
 pillow==11.2.1
 PyJWT==2.9.0
 PyMySQL==1.1.1
