--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
         env:
           PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
         run: |
+          echo "Deploying to PythonAnywhere..."
           curl -s -X POST \
-            -d "token=${PA_API_TOKEN}" \
+            -H "Authorization: Token ${PA_API_TOKEN}" \
             -d "action=reload" \
             https://www.pythonanywhere.com/api/v0/user/Only1JohnN/webapps/Only1JohnN.pythonanywhere.com/reload/
