--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.8.1
+astroid==3.3.9
 attrs==25.3.0
+black==25.1.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+dill==0.4.0
 Django==5.0.14
 django-cors-headers==4.7.0
 django-filter==25.1
@@ -10,16 +14,26 @@ django-taggit==6.1.0
 djangorestframework==3.14.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
+flake8==7.2.0
 gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
+isort==6.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 mailjet-rest==1.3.4
+mccabe==0.7.0
+mypy==1.15.0
+mypy_extensions==1.1.0
 oauthlib==3.2.2
 packaging==25.0
+pathspec==0.12.1
 pillow==11.2.1
+platformdirs==4.3.7
+pycodestyle==2.13.0
+pyflakes==3.3.2
 PyJWT==2.9.0
+pylint==3.3.6
 PyMySQL==1.1.1
 python-decouple==3.8
 python-dotenv==1.1.0
@@ -30,6 +44,8 @@ requests==2.32.3
 requests-oauthlib==2.0.0
 rpds-py==0.24.0
 sqlparse==0.5.3
+tomlkit==0.13.2
+typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
 whitenoise==6.9.0
