--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,13 +23,14 @@ jobs:
         with:
           python-version: '3.13.1'
 
-      - name: Cache dependencies
-        uses: actions/cache@v2
+      - name: Cache pip dependencies
+        uses: actions/cache@v3  # Update to v3 here
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-python-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-python-
+            ${{ runner.os }}-pip-
+  
 
       - name: Install dependencies
         run: |
